# Contact-Book

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
docs/source/: conf.py  index.rst
migrations/versions/: 04b01759847a_add_table_users.py  32aae156d89b_add_verify_for_user.py  4d8c275c6232_init.py  696fa11905ac_add_user_role.py
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: 1249  16406  16407  16413  16415  16417  pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1262  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schema/: contact.py  user.py
src/services/: auth.py  email.py  roles.py
src/templates/: index.html
tests/: conftest.py  test_routes_auth.py  test_unit_repository_contacts.py
