[tool.poetry]
name = "contact-book"
version = "0.1.0"
description = ""
authors = ["Yevhenii Korniev <94477980+Korniev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
alembic = "^1.13.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
uvicorn = "^0.24.0.post1"
greenlet = "^3.0.2"
pydantic = {extras = ["email"], version = "^2.5.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
